# Weatherer-2.0

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  crop_database.json  main.cpp  plant_zones.json  vcpkg.json  zipcodes.json
api/: WeatherProvider.cpp  WeatherProvider.hpp
src/: main.cpp
src/api/: CropDataProcessor.cpp  CropDataProcessor.hpp  PVMetrics.hpp  PvDataProcessor.cpp  PvDataProcessor.hpp  PvHandler.cpp  PvHandler.hpp  PvMetrics.cpp  PvMetrics.hpp  WeatherProvider.hpp
src/api/models/: Coordinates.cpp  Coordinates.hpp  CropData.cpp  CropData.hpp  CropWeatherData.cpp  CropWeatherData.hpp  PvData.cpp  PvData.hpp
src/util/: ChunkOperator.cpp  ChunkOperator.hpp  Date.cpp  Date.hpp  Geolocation.cpp  Geolocation.hpp  NumericRange.hpp  Statistics.hpp  Streams.hpp  Time.cpp  Time.hpp
src/util/network/: NetworkUtils.hpp
util/network/: NetworkUtils.cpp  NetworkUtils.hpp
